# P2PCloud

./: Distributed Project Report.docx  README.md
client/: Cargo.toml
client/src/: main.rs
server/: Cargo.toml
server/src/: main.rs
