[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.7"
viuer = "0.6"
serde = { version = "1.0.192", features = ["derive"] }
bincode = "1.3.3"
termion = "2.0.3"
show-image = "0.13.1"
minifb = "0.25"
steganography = "*"
chrono = "0.4.31"
base64 = "0.21.5"
