[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = "0.29.10"
machine-info = "1.0.9"
termion = "2.0.3"
chrono = "0.4.31"
image = "0.24.7"
bincode = "1.3.3"
steganography = "*"
base64 = "0.13.0"